kubernetes/apps/networking/nginx/internal/manifests/truenas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: networking
spec:
  ports:
    - protocol: TCP
      port: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: networking
subsets:
  - addresses:
      - ip: 10.0.10.31
    ports:
      - port: 80
